--- a/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
+++ b/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
@@ -292,7 +292,7 @@
               </component>
             </children>
           </grid>
-          <grid id="b5f51" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b5f51" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title-resource-bundle="strings" title-key="log"/>
@@ -302,7 +302,7 @@
             <children>
               <scrollpane id="5f7a6">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -322,6 +322,15 @@
                 <properties>
                   <selected value="true"/>
                   <text value="AutoScroll"/>
+                </properties>
+              </component>
+              <component id="8cede" class="javax.swing.JCheckBox" binding="verbose">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <selected value="false"/>
+                  <text value="Verbose"/>
                 </properties>
               </component>
             </children>
