--- a/obfuscator-core/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
+++ b/obfuscator-core/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
@@ -297,7 +297,7 @@
               </component>
             </children>
           </grid>
-          <grid id="b5f51" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="b5f51" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title-resource-bundle="strings" title-key="log"/>
@@ -307,7 +307,7 @@
             <children>
               <scrollpane id="5f7a6">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -336,6 +336,14 @@
                 <properties>
                   <selected value="false"/>
                   <text value="Verbose"/>
+                </properties>
+              </component>
+              <component id="6bb3b" class="javax.swing.JButton" binding="clearLogButton">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Clear"/>
                 </properties>
               </component>
             </children>
