Use logback for logging. Fixed some NPEs when invoking from external app

--- a/obfuscator-core/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
+++ b/obfuscator-core/src/main/java/me/superblaubeere27/jobf/ui/GUI.form
@@ -312,7 +312,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="34365" class="javax.swing.JTextArea" binding="logArea">
+                  <component id="34365" class="javax.swing.JTextPane" binding="logArea">
                     <constraints/>
                     <properties>
                       <editable value="false"/>
